# create-v1-app

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
js/: Cargo.toml  create-v1-app.js  index.js  package.json  pnpm-lock.yaml
js/npm/darwin-arm64/: README.md  package.json
js/npm/darwin-universal/: README.md  package.json
js/npm/darwin-x64/: README.md  package.json
js/npm/freebsd-x64/: README.md  package.json
js/npm/linux-arm-gnueabihf/: README.md  package.json
js/npm/linux-arm-musleabihf/: README.md  package.json
js/npm/linux-arm64-gnu/: README.md  package.json
js/npm/linux-arm64-musl/: README.md  package.json
js/npm/linux-riscv64-gnu/: README.md  package.json
js/npm/linux-x64-gnu/: README.md  package.json
js/npm/linux-x64-musl/: README.md  package.json
js/npm/win32-arm64-msvc/: README.md  package.json
js/npm/win32-ia32-msvc/: README.md  package.json
js/npm/win32-x64-msvc/: README.md  package.json
js/src/: lib.rs
src/: app.rs  cleanup.rs  cli.rs  lib.rs  logger.rs  main.rs  service.rs  tera.rs  utils.rs  workspace.rs
