[package]
edition = "2021"
name = "create-v1-app"
version = "0.1.0"

[dependencies]
anyhow = "1.0.89"
clap = {version = "4.5.19", features = ["derive"]}
clap-verbosity-flag = "2.2.2"
console = "0.15.8"
# we remove all the files created when user press ctrl+c
ctrlc = "3.4.5"
dialoguer = "0.11.0"
indicatif = "0.17.8"
log = "0.4.22"
napi-derive = "2.12.2"
once_cell = "1.20.1"
tera = "1.20.0"
walkdir = "2.5.0"

[[bin]]
name = "create-v1-app"
path = "src/main.rs"

[workspace]
members = ["js"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
